- Inserito plugin AlpineJS collapse; - Fix changeTab; - Aggiunta icona arrow-down; - WIP: Aggiunto folder tree in computo;

--- a/rossiduenord/public/css/app.css
+++ b/rossiduenord/public/css/app.css
@@ -782,6 +782,9 @@ select {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
 }
+.ml-auto {
+  margin-left: auto;
+}
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -811,9 +814,6 @@ select {
 }
 .mb-2 {
   margin-bottom: 0.5rem;
-}
-.ml-auto {
-  margin-left: auto;
 }
 .mt-4 {
   margin-top: 1rem;
@@ -1099,6 +1099,10 @@ select {
   --tw-translate-y: 0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.-rotate-90 {
+  --tw-rotate: -90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .rotate-12 {
   --tw-rotate: 12deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1366,14 +1370,14 @@ select {
   border-top-width: 1px;
   border-bottom-width: 1px;
 }
-.\!border-t-0 {
-  border-top-width: 0px !important;
-}
 .border-b {
   border-bottom-width: 1px;
 }
 .border-b-2 {
   border-bottom-width: 2px;
+}
+.\!border-t-0 {
+  border-top-width: 0px !important;
 }
 .\!border-b-0 {
   border-bottom-width: 0px !important;
@@ -1569,6 +1573,14 @@ select {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -1584,14 +1596,6 @@ select {
 .\!py-0 {
   padding-top: 0px !important;
   padding-bottom: 0px !important;
-}
-.py-0\.5 {
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
-}
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
 }
 .px-6 {
   padding-left: 1.5rem;
@@ -1619,8 +1623,8 @@ select {
 .pb-10 {
   padding-bottom: 2.5rem;
 }
-.\!pt-0 {
-  padding-top: 0px !important;
+.pl-2 {
+  padding-left: 0.5rem;
 }
 .pl-3 {
   padding-left: 0.75rem;
@@ -1630,6 +1634,9 @@ select {
 }
 .pl-4 {
   padding-left: 1rem;
+}
+.\!pt-0 {
+  padding-top: 0px !important;
 }
 .\!pr-14 {
   padding-right: 3.5rem !important;
@@ -1955,6 +1962,11 @@ select {
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.transition-transform {
+  transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -2843,16 +2855,16 @@ input[type=number] {
     grid-column: span 2 / span 2;
   }
 
+  .lg\:col-span-8 {
+    grid-column: span 8 / span 8;
+  }
+
   .lg\:col-span-4 {
     grid-column: span 4 / span 4;
   }
 
   .lg\:col-span-1 {
     grid-column: span 1 / span 1;
-  }
-
-  .lg\:col-span-8 {
-    grid-column: span 8 / span 8;
   }
 
   .lg\:-mx-8 {
